--- a/app/src/main/res/layout/extra_item_radio.xml
+++ b/app/src/main/res/layout/extra_item_radio.xml
@@ -1,6 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="wrap_content">
+    android:layout_width="match_parent" android:layout_height="wrap_content"
+    >
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        android:layout_marginStart="@dimen/_15sdp"
+        android:layout_marginEnd="@dimen/_15sdp"
+        android:text="Type"
+        android:id="@+id/txt_heading"/>
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/_40sdp"
@@ -9,6 +19,7 @@
         android:layout_marginTop="@dimen/_5sdp"
         android:layout_marginBottom="@dimen/_5sdp"
         android:padding="@dimen/_5sdp"
+        android:layout_below="@+id/txt_heading"
         android:id="@+id/relative_extra"
         android:background="@drawable/background_grey">
 
@@ -36,7 +47,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_centerVertical="true"
-            android:textSize="35sp"
+            android:textSize="20sp"
             android:id="@+id/txt_extra_name"
             android:layout_centerHorizontal="true"
             android:textColor="@color/black"
@@ -79,7 +90,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:textSize="30sp"
+            android:textSize="20sp"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
             android:visibility="visible"
