--- a/app/src/main/res/layout-sw720dp/layout_extra_item.xml
+++ b/app/src/main/res/layout-sw720dp/layout_extra_item.xml
@@ -1,6 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="wrap_content">
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/black"
+        android:textSize="35sp"
+        android:visibility="gone"
+        android:layout_marginStart="@dimen/_15sdp"
+        android:layout_marginEnd="@dimen/_15sdp"
+        android:text="Type"
+        android:id="@+id/txt_heading"/>
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/_40sdp"
@@ -9,6 +19,7 @@
         android:layout_marginTop="@dimen/_5sdp"
         android:layout_marginBottom="@dimen/_5sdp"
         android:padding="@dimen/_5sdp"
+        android:layout_below="@+id/txt_heading"
         android:id="@+id/relative_extra"
         android:background="@drawable/background_grey">
 
@@ -96,6 +107,11 @@
             android:layout_alignParentStart="true"/>
 
     </RelativeLayout>
-
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/recyler_extra_items"
+        android:visibility="gone"
+        android:layout_below="@+id/relative_extra"/>
 
 </RelativeLayout>
