--- a/app/src/main/res/layout/layout_cart.xml
+++ b/app/src/main/res/layout/layout_cart.xml
@@ -195,6 +195,16 @@ android:layout_below="@+id/relative_cart"
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/_5sdp"
+            android:layout_marginTop="@dimen/_10sdp"
+            android:textColor="@color/color_orange"
+            android:textSize="@dimen/_18sdp"
+            android:text="45"
+            android:visibility="gone"
+            android:id="@+id/txt_free_toppings"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="@string/condiments"
             android:textSize="25sp"
             android:visibility="gone"
